fix: added z-index in header

--- a/src/interfaces/layout/Initial/Header/Header.styles.module.scss
+++ b/src/interfaces/layout/Initial/Header/Header.styles.module.scss
@@ -6,6 +6,8 @@
   top: 0;
   left: 0;
 
+  z-index: 1200;
+
   background: var(--clr-white);
 }
 
